# bbbs

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
account/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20210518_1455.py  0003_remove_customuser_is_verified.py  0004_alter_customuser_role.py  0005_alter_customuser_role.py  0006_alter_customuser_role.py  0007_alter_customuser_role.py  0008_alter_customuser_role.py  0008_customuser_city.py  0009_customuser_city.py  0010_alter_customuser_city.py  0011_alter_customuser_city.py  0012_alter_customuser_city.py  0013_alter_customuser_city.py  0014_alter_customuser_role.py
bbbs/: .env  settings.py  urls.py
bbbs/afisha/: admin.py  models.py  serializers.py  urls.py  views.py
bbbs/common/: __init__.py  admin.py  apps.py  models.py  permission.py  serializers.py  signals.py  urls.py  views.py
bbbs/main/: urls.py
bbbs/questions/: admin.py  models.py  serializers.py  urls.py  views.py
bbbs/rights/: admin.py  models.py  urls.py
bbbs/user/: admin.py  apps.py  forms.py  models.py  serializers.py
bbbs/where_to_go/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
event/: admin.py  models.py  serializers.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_city_user.py  0003_alter_city_user.py  0004_remove_city_user.py  0005_alter_city_options.py  0006_auto_20210521_1849.py  0007_auto_20210521_1948.py  0008_alter_event_city.py  0009_alter_event_city.py  (+12 more)
(+21 files in other folders)
